<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="40dp"
        android:text="@string/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="456dp"
        android:text="@string/top_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:layout_marginBottom="352dp"
        android:text="@string/date_check"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date_and_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="352dp"
        android:text="@android:string/ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintStart_toEndOf="@+id/date_check" />

    <TextView
        android:id="@+id/restaurant_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="275dp"
        android:layout_marginRight="275dp"
        android:layout_marginBottom="356dp"
        android:text="@string/restaurant_id"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/restaurant_address_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="275dp"
        android:layout_marginRight="275dp"
        android:layout_marginBottom="324dp"
        android:text="@string/restaurant_address"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="268dp"
        android:text="@android:string/yes"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintStart_toEndOf="@+id/restaurant_id" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="236dp"
        android:text="@android:string/yes"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintStart_toEndOf="@+id/restaurant_address_id" />
</androidx.constraintlayout.widget.ConstraintLayout>